# tf_pydf

./: LICENSE  README.md  example_script.py  pyproject.toml
tests/: test_tf_idf.py
tf_pydf/: __init__.py  tf_idf.py
