[tool.poetry]
name = "tf_pydf"
version = "0.1.0"
description = "A simple implimentation of TF-IDF"
authors = ["Edvinas Adomaitis <edvinasad7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
